<resources>
    <string name="app_name">BandAFinal</string>
    <string name="facebook_application_id">715146382318761</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_a_picture_for_your_profile">Select a picture for your profile</string>
    <string name="uploading_image">Uploading Image...</string>
    <string name="deleted_image_succesfully">Deleted image succesfully</string>
    <string name="deleted_image_failed">Deleted image failed</string>
    <string name="finished">Finished</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="or_click_here_to_login">Or click here to login</string>
    <string name="registering_please_wait">Registering, please wait...</string>
    <string name="error_registering_user">Error registering user</string>
    <string name="you_have_an_error">You have an error</string>
    <string name="login_failed">Login failed</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="password">Enter password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="forgot">Forgot password?</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="please_login">Please login</string>
    <string name="prompt_password">Prompt password</string>
    <string name="fields_are_empty">Fields are empty</string>
    <string name="error_occurred">Error occurred</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="already_registered">Already registered?</string>
    <string name="please_enter_a_valid_email">Please enter e valid email</string>
    <string name="minimum_length_of_password_should_be_6">Minimum length of password should be 6</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="musician_added">Musician added</string>
    <string name="profile_updated">profile_updated</string>
    <string name="verified">Verified</string>
    <string name="email_verified">Email verified</string>
    <string name="email_not_verified">Email not verified (Click to verify)</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="instruments">Instruments</string>
    <string name="playlists">Playlists</string>
    <string name="rehearsals">Rehearsals</string>
    <string name="concerts">Concerts</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate and Settings</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="gretel_hilbing">Usuario</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="bands">Bands</string>
    <string name="please_select_instrument_you_play">Please, select the instrument/s you play</string>
    <string name="select_your_experience">Select your experience</string>
    <string name="add_instrument">Add instrument</string>
    <string name="update">Update</string>
    <string name="updating_instruments">Updating instruments</string>
    <string name="please_upload_an_image">Please upload an image</string>
    <string name="instrument_updated_successfully">Instrument updated successfully</string>
    <string name="old_values">Actual values</string>
    <string name="new_values">New Values</string>
    <string name="updating">Updating...</string>
    <string name="delete">Delete</string>
    <string name="instrument_deleted">Instrument deleted</string>
    <string name="enter_a_name_for_your_band">Enter a name for your band</string>
    <string name="search_musician">Search musician</string>
    <string name="create_band">Create Band</string>
    <string name="add_musician">Add musician</string>
    <string name="invite_musician">Invite musician</string>

    <string name="spotify_client_id">8a3367eb003649048f31515144e208b5</string>
    <string name="add_song">Add song</string>
    <string name="songs">Songs</string>
    <string name="adding_musicians_to_band">Adding musicians to band</string>
    <string name="search">Search...</string>
    <string name="select_musician">Select musician...</string>

    <string name="youtube_api_key">AIzaSyAblCydvFwrbq-w7XnBLxuNoSkr0jU8FaU</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="select_a_song" />
    <string name="enter_name_of_the_song">Enter name of the song</string>
    <string name="enter_name_of_the_artist_or_band">Enter name of the artist or band</string>
    <string name="enter_duration">Enter duration</string>
    <string name="copy_youtube_link">Copy youtube link</string>
    <string name="song_added">Song added</string>
    <string name="updating_song">Updating song</string>
    <string name="song_deleted">Song deleted</string>
    <string name="song_added_successfully">Song added succesfully</string>
    <string name="no_data_available">No data available</string>
    <string name="updating_musicans_bands">Updating musicians from band...</string>
    <string name="musician_updated_successfully">Musician updated successfully</string>

    <array name="instruments">
        <item>Bass</item>
        <item>Guitar</item>
        <item>Drums</item>
        <item>Ukelele</item>
        <item>Cello</item>
        <item>Flute</item>
        <item>Viola</item>
        <item>Piano</item>
        <item>Violin</item>
        <item>Saxofon</item>
        <item>None</item>
    </array>

    <array name="experience">
        <item>Basic</item>
        <item>Medium</item>
        <item>Advanced</item>
        <item>None</item>
    </array>

</resources>
