<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/playlist_bandNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlists" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_song" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="373dp" />

    <Button
        android:id="@+id/addSongBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_song" />
</LinearLayout>